# fractol

./: CMakeLists.txt  Makefile  README.md  gradients.txt  norm.txt  parse_css_gradient.py
ft_printf/: Makefile
include/: file_io.h  fractol.h  gradient.h  ocl.h
libft/: ft_lstmap.c  ft_strlcat.c  ft_strsplit.c  ft_strsplit_word.c
res/: gradients.txt
res/cl/: burning_ship.cl  celtic.cl  complex.cl  complex.hcl  julia.cl  knight.cl  mandelbrot.cl  test_complex.c  utils.cl  utils.hcl
src/: animation.c  app.c  app_utils.c  events.c  file_io.c  gradient.c  gradient_utils.c  main.c  renderer.c  renderer_utils.c  utils.c
src/cl/: burning_ship.cl  complex.c  complex.h  julia.cl  mandelbrot.cl  test_complex.c  utils.c  utils.cl  utils.h
src/ocl/: ocl_error.c  ocl_init.c  ocl_program.c  ocl_utils.c
