cmake_minimum_required(VERSION 3.2)

set(NAME fractol)
project(${NAME} C)
find_package(OpenCL REQUIRED)

file(GLOB SRC src/*.c src/ocl/*.c)
find_package(OpenCL REQUIRED)

if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
    link_directories(libft minilibx_macos ft_printf)
    add_executable(${NAME} ${SRC})
    target_link_libraries(${NAME} libmlx.a m ft ft_printf ${OpenCL_LIBRARY} "-framework OpenGL" "-framework AppKit")
    target_include_directories(${NAME} PUBLIC libft include minilibx_macos libftprintf.a ${OpenCL_INCLUDE_DIRS} ft_printf/include)
else()
    include_directories(include minilibx libft ft_printf/include)
    link_directories(libft minilibx)
    add_executable(${NAME} ${SRC})
    target_link_libraries(${NAME} ft ft_printf libmlx.a Xext X11 m ${OpenCL_LIBRARY})
endif()
add_subdirectory(libft)
add_subdirectory(ft_printf)